update code source

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,16 +1,27 @@
 data-types:
 	$(CC) -o data-types data-types.c
 
-
 types-size:
 	$(CC) -o types-size types-size.c
 
 pointers:
 	$(CC) -o pointers pointers.c
 
-all: clean types-size pointers data-types
+macros:
+	$(CC) -o macros macros.c
+
+define:
+	$(CC) -o define define.c
+
+overflow:
+	$(CC) -o overflow overflow.c
+
+main:
+	$(CC) -o main main.c
+
+all: clean types-size pointers data-types define macros overflow main
 
 clean:
-	rm -f *~ types-size pointers data-types
+	rm -f *~ types-size pointers data-types define macros overflow main
 
 .PHONY: clean all
