--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,30 +1,16 @@
-data-types:
-	$(CC) -o data-types data-types.c
+CC=/usr/bin/gcc
+CFLAGS=-Wall
 
-types-size:
-	$(CC) -o types-size types-size.c
+SRCS := $(wildcard *.c)
+BINS := $(SRCS:%.c=%)
 
-pointers:
-	$(CC) -o pointers pointers.c
+%: %.c
+	${CC} ${CFLAGS} $< -o $@
 
-macros:
-	$(CC) -o macros macros.c
 
-define:
-	$(CC) -o define define.c
-
-overflow:
-	$(CC) -o overflow overflow.c
-
-main:
-	$(CC) -o main main.c
-
-linkedlist:
-	$(CC) -o linkedlist linkedlist.c
-
-all: clean types-size pointers data-types define macros overflow main linkedlist
+all: clean ${BINS}
 
 clean:
-	rm -f *~ types-size pointers data-types define macros overflow main linkedlist
+	rm -f *~ ${BINS}
 
 .PHONY: clean all
