--- a/part3/libraries/Makefile
+++ b/part3/libraries/Makefile
@@ -1,11 +1,13 @@
+CFLAGS=-O2 -pedantic -Wall
+
 shared:
-	$(CC) -shared -o libfunctions.so libfunctions.c
-	$(CC) -L. -Wall -o shared main.c -lfunctions
+	$(CC) $(CFLAGS) -shared -o libfunctions.so libfunctions.c
+	$(CC) $(CFLAGS) -L. -Wall -o shared main.c -lfunctions
  
 static:
-	$(CC) -c libfunctions.c
-	$(AR) crs libfunctions.a libfunctions.o
-	$(CC) -static -o static main.c libfunctions.a
+	$(CC) $(CFLAGS) -c libfunctions.c
+	$(AR) $(CFLAGS) crs libfunctions.a libfunctions.o
+	$(CC) $(CFLAGS) -static -o static main.c libfunctions.a
 
 clean:
 	rm -f static shared *~ *.o *.a *.so
