--- a/part3/disassembling/Makefile
+++ b/part3/disassembling/Makefile
@@ -1,5 +1,8 @@
 main:
 	$(CC) -O0 -g -o main main.c
 
+main-no-frame-pointer:
+	$(CC) -fomit-frame-pointer -O0 -g -o main main.c
+
 clean:
 	rm -f main
