add mutex and semaphore code

--- a/part6/Makefile
+++ b/part6/Makefile
@@ -1,5 +1,5 @@
 CC =gcc
-CFLAGS=-pedantic -Wall -g
+CFLAGS=-pedantic -Wall -g -O0
 LDFLAGS=-lrt -pthread
 
 pthread-create:
@@ -8,7 +8,13 @@ pthread-create:
 pthread-barrier:
 	$(CC) $(CFLAGS) $(LDFLAGS) -o pthread-barrier pthread-barrier.c
 
-all: pthread-create pthread-barrier
+pthread-mutex:
+	$(CC) $(CFLAGS) $(LDFLAGS) -o pthread-mutex pthread-mutex.c
+
+pthread-semaphore:
+	$(CC) $(CFLAGS) $(LDFLAGS) -o pthread-semaphore pthread-semaphore.c
+
+all: pthread-create pthread-barrier pthread-semaphore pthread-mutex
 
 clean:
-	rm -f *~ *.o pthread-create pthread-barrier
+	rm -f *~ *.o pthread-create pthread-barrier pthread-semaphore pthread-mutex
