update makefile, remove flags for `ar`

--- a/part3/libraries/Makefile
+++ b/part3/libraries/Makefile
@@ -6,7 +6,7 @@ shared:
  
 static:
 	$(CC) $(CFLAGS) -c libfunctions.c
-	$(AR) $(CFLAGS) crs libfunctions.a libfunctions.o
+	$(AR) crs libfunctions.a libfunctions.o
 	$(CC) $(CFLAGS) -static -o static main.c libfunctions.a
 
 clean:
